[gd_scene load_steps=6 format=3 uid="uid://de43yyxgdi5wh"]

[ext_resource type="Script" path="res://System/PhysicsObject.gd" id="1_q01gv"]
[ext_resource type="Script" path="res://System/Boxes/MovementBox.gd" id="2_u42th"]
[ext_resource type="Script" path="res://System/Boxes/HurtBox.gd" id="3_d0m45"]
[ext_resource type="Script" path="res://System/StateMachine.gd" id="3_g6ygp"]
[ext_resource type="Script" path="res://System/State.gd" id="4_0e5dg"]

[node name="GameObject" type="Node2D"]
script = ExtResource("1_q01gv")

[node name="MovementBox" type="Node2D" parent="."]
script = ExtResource("2_u42th")

[node name="HurtBox" type="Node2D" parent="."]
script = ExtResource("3_d0m45")
bounds = Vector2(10, 10)

[node name="Sounds" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("3_g6ygp")

[node name="Default" type="Node" parent="StateMachine"]
script = ExtResource("4_0e5dg")
